--- a/DeepFakes/bibliography.bib
+++ b/DeepFakes/bibliography.bib
@@ -46,3 +46,33 @@
   year      = {2013},
   pages = {108--122},
 }
+
+@inproceedings{sanderson2009multi,
+  title={Multi-region probabilistic histograms for robust and scalable identity inference},
+  author={Sanderson, Conrad and Lovell, Brian C},
+  booktitle={International conference on biometrics},
+  pages={199--208},
+  year={2009},
+  organization={Springer}
+}
+
+
+@article{Schroff_2015,
+   title={FaceNet: A unified embedding for face recognition and clustering},
+   ISBN={9781467369640},
+   url={http://dx.doi.org/10.1109/CVPR.2015.7298682},
+   DOI={10.1109/cvpr.2015.7298682},
+   journal={2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+   publisher={IEEE},
+   author={Schroff, Florian and Kalenichenko, Dmitry and Philbin, James},
+   year={2015},
+   month={Jun}
+}
+@misc{simonyan2015deep,
+      title={Very Deep Convolutional Networks for Large-Scale Image Recognition}, 
+      author={Karen Simonyan and Andrew Zisserman},
+      year={2015},
+      eprint={1409.1556},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
